manifest/service/proxy.yml
# Deployment for nginx
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: server
  labels:
    app.kubernetes.io/name: rest-web
    app.kubernetes.io/instance: rest-web-server
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: dev
    app.kubernetes.io/managed-by: manual
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: rest-web-server
      app.kubernetes.io/component: web
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rest-web
        app.kubernetes.io/instance: rest-web-server
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: dev
        app.kubernetes.io/managed-by: manual
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - name: http
              protocol: TCP
              containerPort: 80

# ClusterIP Service for nginx
---
kind: Service
apiVersion: v1
metadata:
  name: rest-web-server-svc
  labels:
    app.kubernetes.io/name: rest-web
    app.kubernetes.io/instance: rest-web-server
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: dev
    app.kubernetes.io/managed-by: manual
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: rest-web-server
    app.kubernetes.io/component: web
    #app: server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
