manifest/service/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-router
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  backend:
    serviceName: rest-web-server-svc
    servicePort: 80
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            backend:
              serviceName: service-for-application
              servicePort: 80
  tls:
    - hosts:
        - localhost
